# js-bambisleep-chat

./: .copilot-codeGeneration-instructions.md  .env.example  .gitignore  BUILD  BUILD.md  CLEANUP-CHANGELOG.md  CONDITIONING_README.md  Dockerfile  MEMORY.md  README.md  URAG.md  apache2_wss  docker-compose.yml  filteredWords.json  gradio_interface.py  hestia_config  monitor.js  nginx_wss  package.json  pyproject.toml  restart-server.bat  role.json  run-memory-safe.bat  sample.py  server.js  structure.md  test-mongodb-connection.cjs  test-shutdown.sh  tsconfig.json  ultravox.config.js  verify-mongodb-network.sh  worker.js  zonos.py
backup/: dbConnection.js.bak  doxxerinator.js.bak  memory-management.js.bak
bambisleep-profile/: README.md  package.json
config/: footer.config.js  ultravox.config.js
docs/: API.md  CONNECTION-MANAGEMENT.md  DATABASE-CONNECTION.md  INSTALLATION.md  MONGODB-DOCKER.md  MONGODB-SETUP.md  README-imageGenerator.md  USER-GUIDE.md  folder-structure.md
f5-tts-app/: README.md  config.yaml  download_model.py  requirements.txt  server.py  setup.py  setup.sh  setup_model.py  setup_structure.sh
f5-tts-inference-server/: Dockerfile  README.md  docker-compose.yml  requirements.txt  setup.py
history/: 1BggZjbxsHh7c5klAAAl.json  1gwT-cSBC5hbNKpQAAAb.json  2LxVYaAALGIBH1BqAAAB.json  2nWiBK3UHfADM9tgAAAT.json  FpMfSrrw97_l1m4GAAAf.json  KXaxsH0Ueeku8b9RAAAZ.json  P-cpMKhhTLVsxPxAAAAR.json  TtRHSfF_EW0So-_FAAAj.json  XbI6VeaIeJJC751cAAAD.json  YAYHuEs0l771ipAVAAAV.json  dr6UC5EPviP5nZ_AAAAB.json  hEVo8HwXQ_9ZPEgjAAAX.json  i3E8WPw0CxqCZ491AAAP.json  (+5 more)
(+409 files in other folders)
